# swagger.json
@@ -9,11 +9,15 @@
   "basePath": "/",
   "tags": [{
       "name": "client",
-      "description": "Stuff for inputing and changing a client's data."
+      "description": "Stuff for inputing and changing a client's information."
     },
     {
       "name": "car",
-      "description": "car information."
+      "description": "Stuff for inputing and changing a car information."
+    },
+    {
+      "name": "user",
+      "description": "Stuff for inputing and changing a client's data."
     }
   ],
   "schemes": [
@@ -323,13 +327,153 @@
             "description": "Internal Server Error"
           }
         }
-
     },
     "delete": {
       "tags": [
         "car"
       ],
       "description": "Delete a Car",
+      "parameters": [{
+        "name": "id",
+        "in": "path",
+        "required": true,
+        "type": "string"
+      }],
+      "responses": {
+        "201": {
+          "description": "Created"
+        },
+        "400": {
+          "description": "Bad Request"
+        },
+        "401": {
+          "description": "Unauthorized"
+        },
+        "500": {
+          "description": "Internal Server Error"
+        }
+      }
+    }
+  },
+  "/users/": {
+    "get": {
+      "tags": [
+        "user"
+      ],
+      "description": "",
+      "produces": [
+        "application/json"
+      ],
+      "responses": {
+        "200": {
+          "description": "OK"
+        }
+      }
+    },
+    "post": {
+      "tags": [
+        "user"
+      ],
+      "description": "",
+      "parameters": [{
+        "name": "body",
+        "in": "body",
+        "schema": {
+          "type": "object",
+          "properties": {
+            "username": {
+              "example": "any"
+            },
+            "email": {
+              "example": "any"
+            },
+            "password": {
+              "example": "any"
+            }
+          }
+        }
+      }],
+      "responses": {
+        "201": {
+          "description": "Created"
+        },
+        "500": {
+          "description": "Internal Server Error"
+        }
+      }
+    }
+  },
+  "/users/{id}": {
+    "get": {
+      "tags": [
+        "user"
+      ],
+      "description": "",
+      "produces": [
+        "application/json"
+      ],
+      "parameters": [{
+        "name": "id",
+        "in": "path",
+        "required": true,
+        "type": "string"
+      }],
+      "responses": {
+        "200": {
+          "description": "OK"
+        }
+      }
+    },
+    "put": {
+      "tags": [
+        "user"
+      ],
+      "description": "Update a User",
+      "parameters": [{
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "type": "string"
+        },
+        {
+          "name": "body",
+          "in": "body",
+          "schema": {
+            "type": "object",
+            "properties": {
+              "username": {
+                "example": "any"
+              },
+              "email": {
+                "example": "any"
+              },
+              "password": {
+                "example": "any"
+              }
+            }
+          }
+        }
+      ],
+      "responses": {
+        "204": {
+          "description": "No Content"
+        },
+        "400": {
+          "description": "Bad Request"
+        },
+        "401": {
+          "description": "Unauthorized"
+        },
+        "500": {
+          "description": "Internal Server Error"
+        }
+      }
+  },
+    "delete": {
+      "tags": [
+        "user"
+      ],
+      "description": "Delete a User",
       "parameters": [{
         "name": "id",
         "in": "path",
